[gd_scene load_steps=5 format=3 uid="uid://cnr4t4xujgpwx"]

[ext_resource type="Texture2D" uid="uid://eakkbv86ac5x" path="res://item/item_atlas.tres" id="1_koksw"]
[ext_resource type="Script" uid="uid://b8jshi3ba5cl2" path="res://skill_tree/talent_slot.gd" id="2_1kuqh"]
[ext_resource type="FontFile" uid="uid://n3d07pw2ksip" path="res://menus/Micro5-Regular.ttf" id="2_xqaru"]
[ext_resource type="Script" uid="uid://gr33gpu0js8i" path="res://skill_tree/talent_line.gd" id="3_4dqs8"]

[node name="TalentSlot" type="TextureButton"]
z_index = 1
texture_filter = 1
offset_right = 32.0
offset_bottom = 32.0
texture_normal = ExtResource("1_koksw")
script = ExtResource("2_1kuqh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_xqaru")
theme_override_font_sizes/font_size = 13
text = "
0/3"
horizontal_alignment = 2
vertical_alignment = 2

[node name="DisabledPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="TalentLine" type="Line2D" parent="."]
top_level = true
points = PackedVector2Array(16, 16)
width = 2.0
default_color = Color(0.47, 0.47, 0.47, 1)
script = ExtResource("3_4dqs8")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
